# Factories

./: .gitignore  CMakeLists.txt  DummyFactory.cpp  FunctionalFactoryBoost.hpp  Main.cpp  NoFactory.hpp  SFINAEFactory.hpp  TemplateConstExprStrategy.hpp  TemplateSpecializationFactory.hpp  TypeErasureAny.hpp  TypeErasureVariant.hpp
AuxiliaryClasses/: AuxiliarClasses.hpp  AuxiliarClassesLiskov.hpp  AuxiliarClassesNotLiskov.hpp
CommonStrategies/: NoFactory.hpp  UsualFactory.hpp
GenericFactoryMethod/: GenericFactoryMethod.hpp
TemplateStrategies/: SFINAEFactory.hpp  TemplateConstExprStrategy.hpp  TemplateSpecializationFactory.hpp
TraditionalFactoryMethod/: Creator.hpp  Translator1Creator.hpp  Translator2Creator.hpp
TypeErasureStrategies/: TypeErasureAny.hpp  TypeErasureVariant.hpp
